<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnlyController</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_list_btn">Game Config Files</string>
    <string name="key_config_btn">Key Configuration</string>
    <string name="settings_tv">Settings</string>
    <string name="key_file_name_tv">"Key File: "</string>
    <string name="touch_file_name_tv">"Touch File: "</string>
    <string name="unknown">Unknown</string>
    <string name="ime_config_tv">Settings</string>
    <string name="quit">Quit Program</string>
    <string name="external_starage_has_unmounted">External starage has unmounted， please insert it.</string>
    <string name="make_sdcard_input_jar_dir_error">Make \" inputjar dir \" in SDCard Error</string>
    <string name="root_successful">Root Successful</string>
    <string name="root_failed">Root Failedl</string>
    <string name="connect_inputjar_error">Connect OnlyInput Fialed</string>
    <string name="ime_valid_config">Enable IME</string>
    <string name="btn_add_game">Add Game</string>
    <string name="no_key_file_name_tv">no config file yet</string>
    <string name="btn_key_config">Map Keys</string>
   	<string name="btn_touch_config">Map Touch</string>
   	<string name="btn_edit_key_config">Edit Keys Map Config</string>
   	<string name="btn_enable_key_file_config">Enable Keys Map Config</string>
   	<string name="btn_disable_key_file_config">Disable Keys Map Config</string>
   	<string name="btn_enable_touch_file_config">Enable Touch Map Config</string>
   	<string name="btn_disable_touch_file_config">Disable Touch Map Config</string>
   	<string name="btn_delete_game">Remove Game All Config</string>
   	<string name="key_file_state_left_bracket">[</string>
   	<string name="key_file_state_right_bracket">]</string>
   	<string name="tv_key_file_state_disable">Disabled</string>
   	<string name="tv_key_file_state_enable">Enabled</string>
   	<string name="item_is_exited">Selected game configuration has existed</string>
   	<string name="key_view_configuration">Key Map</string>
   	<string name="btn_save">Save</string>
   	<string name="configuration_saved">Configuration File Saved</string>
   	<string name="yet_not_save_config">You have not save configuration file yet, do you save it ?</string>
   	<string name="discard">Discard</string>
   	<string name="please_input_key">Please Any Key</string>
   	<string name="cancel">Cancel</string>
   	<string name="system_initing">System Initializing ...</string>
   	<string name="invalid_joystick_area">Invalid joystick area</string>
    <string name="left_joystick">Left Joystick</string>
    <string name="right_joystick">Right Joystick</string>
    <string name="has_left_joystick">Left Joystick has drew</string>
    <string name="has_right_joystick">right Joystick has drew</string>
    <string name="btn_open_game">Run the Game</string>
    <string name="save_to">"Save as "</string>
    <string name="ime_switchon">Only Game IME Switch On</string>
    <string name="ime_switchoff">Only Game IME Switch Off</string>

</resources>