<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_ly"
        android:background="#ff000000" >
        <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/key_view_configuration"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
	        android:textColor="@color/white_color"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/key_file_state_left_bracket"
            android:textColor="@color/white_color"/>
        <TextView android:id="@+id/tv_package_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white_color"/>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/key_file_state_right_bracket"
            android:textColor="@color/white_color"/>
	    <Button android:id="@+id/btn_save"
	        android:layout_height="match_parent"
	        android:layout_width="100dp"
	        android:background="@drawable/btn_add_game_state"
	        android:text="@string/btn_save"
	        android:textColor="@color/white_color"/>
    </LinearLayout>
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
	    <LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:id="@+id/key_config_ly" />
	</ScrollView>
</LinearLayout>