<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/click_state"
    android:gravity="center_vertical" >
 
    <ImageView android:id="@+id/icon_iv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/ic_launcher"/>
    
    <LinearLayout android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView android:id="@+id/app_name_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white_color"
            android:textSize="20dp"/>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_file_name_tv"
                android:textColor="@color/white_color" />
            <TextView android:id="@+id/key_file_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_file_name_tv"
                android:textColor="@color/white_color" />
            <TextView android:id="@+id/touch_file_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox android:id="@+id/checkbox_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</LinearLayout>